dbeaver/pro#7020 Panel toolbar layout fix